change jar name

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 		to build a jar file out of this project!
 	-->
   <build>
+    <finalName>app.jar</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
