--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
-          <appendAssemblyId>false</appendAssemblyId>
+          <!--appendAssemblyId>false</appendAssemblyId-->
         </configuration>
         <executions>
           <execution>
